package fields;

public enum FieldEvent {
    Chance,
    GoToJail
}

