@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Player{
- balance : int
- name : String
- position : int
+ changeBalance(int) : void
}
class Gamecontroller{
- indexOfCurrentPlayer : int
- currentDieRoll : int
- Player
- Die
- GameBoard
- ArrayList<Player>
- GUI
- initialize() : void
+ startGameLoop() : void
- rollDice() : void
- setNextPlayer() : void
- movePlayer() : void
- hasReachedStartField() : boolean
- evaluateFieldAndExecute() : void
+ executePropertyField(PropertyField, Player) : void
- executeEventField(EventField) : void
+ foundLoser(ArrayList<Player>) : boolean
- getMostWealthy : Player
- getNumberOfPlayers() : int
- getUserInputToBegin : void
}

class Die{
- MAX : int
- faceValue : int
+getFacevalue() : int
+roll() : int
+toString() : String
}
class GameBoard{
- Field[]
+ getIndexOfGoToJail() : int
+ getFieldList() : Field[]
}

class main{
{static}+ main()
}
class GUI{
- GUI
- Gamecontroller
- GameBoard
- GUI_Field[]
- ArrayList<GUI_Player>
- Color[]
- ArrayList<GUI_car>
+ createStartField(int) : void
+ createPropertyField(int, String, Color) : void
+ createChanceField(int) : void
+ createJailField(int) : void
+ createEmptyField(int) : void
+ populateFields() : void
+ addCarsToBoard() : void
+ addPlayersToBoard(int) : void
+ displayDieRoll(int) : void
+ moveCarToField(int) : void
+ displayPlayerBalance() : void
+ displayRollDiceButton(String) : String
+ displayPlayerSelectionButtons() : String
+ displayWinnerAndExit(Player) : void
+ refreshOwnership() void
}

class Deck{
- ChanceCard[]
}

abstract class ChanceCard{
+ execute(Player) : void
+ printText(): String
}

class BirthdayCard{
+ execute(Player) : void (override)
- text : String
- amount : int
}

class MoveCard{
+ execute(Player) : void (override)
text : String
amount : int
}

class MoveToCard{
+ execute(Player) : void (override)
text: String
value : int
}

class FreeFieldCard{
 text : String
 color : String
 color2 : String
+ execute(Player, Board) : void (override)
}

class GiveCardCard{
text : String
name : String
- buyNextFieldActivated() : void
+ execute(Player, Board) : void (override)
}

class RecieveOrPayCard{
+ execute(Player) : void (override)
text : String
amount : int
}

class GetOutOfJailCard{
+ execute(Player) : void (override)
 text : String
}


class Field{
- name : String
+ getName() : String
}

class PropertyField{
- value : int
- Color
- Player
+ getValue() : int
+ getOwner() : Player
+ setOwner(Player) : void
+ hasOwner() : boolean
}

class EventField{
- FieldEvent
+ getFieldEvent() : FieldEvent
}

enum FieldEvent{
Chance
GoToJail
}
main "1" - "1" Gamecontroller : runs
Gamecontroller "1" o-- "1" GameBoard : evaluates
Gamecontroller "1" o-- "1" Die : rolls
Gamecontroller "1" o-- "1" Deck : picksCard
Deck "1"*---"20" ChanceCard : contains
Gamecontroller "1" o-- "2..4" Player : movesAndChangeBalance
FieldEvent "1" --* "1" EventField : reads
Gamecontroller"1" - "1"GUI : sendsInformation
GameBoard "1" *-- "24" Field : contains
Field "1" <|- "1" PropertyField : isA
EventField "1" -|> "1" Field : isA
ChanceCard "20" <|-- "2" MoveCard : isA
ChanceCard "20" <|-- "2" MoveToCard : isA
BirthdayCard "1" -|> "20" ChanceCard :isA
FreeFieldCard "8" -|> "20" ChanceCard :isA
ChanceCard "20" <|- "4" GiveCardCard : isA
ChanceCard "20" <|- "2" RecieveOrPayCard : isA
ChanceCard "20" <|-- "1" GetOutOfJailCard : isA

@enduml